--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "minimum-stability": "dev",
     "require": {},
     "require-dev": {
-        "phpunit/phpunit": "^7"
+        "phpunit/phpunit": "^7",
+        "symfony/var-dumper": "^4.4@dev"
     },
     "autoload": {
         "psr-4": {
